# gifdecpp

./: .gitignore  CMakeLists.txt  README.md  example.cc
gifdec/: CMakeLists.txt
gifdec/include/gifdec/: gifdec.cc  gifdec.h
gifdec/include/gifdec/c/: gifdec_c.c  gifdec_c.h
